--- a/team/index.html
+++ b/team/index.html
@@ -287,7 +287,7 @@
 		</div> <!-- cd-bio-content -->
 	</div> <!-- cd-member-bio -->
 	<a href="#0" class="cd-member-bio-close">Close</a> <!-- close the author bio section -->
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+<script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
 <script src="js/main.js"></script> <!-- Gem jQuery -->
 </body>
 </html>
