--- a/team/index.html
+++ b/team/index.html
@@ -138,50 +138,38 @@
 				<img src="img/adnan-rafiq.jpg" alt="Member Bio image">
 			</div>
 			<h1>Adnan Rafique</h1>
-			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Non, amet, voluptatibus et omnis dolore illo saepe voluptatem qui quibusdam sunt corporis ut iure repellendus delectus voluptate explicabo temporibus quos eaque?</p>
+			<p>I put great emphasis on pixel perfection. My ambition is to make every design look good and work well. </p>
 			<div class="skills">
 				<h1>My Skills:</h1>
 
-				<div class="skillbar clearfix " data-percent="99%">
-					<div class="skillbar-title" style="background: #27ae60;"><span>Design + UX</span></div>
+				<div class="skillbar clearfix " data-percent="85%">
+					<div class="skillbar-title" style="background: #27ae60;"><span>User Experience </span></div>
 					<div class="skillbar-bar" style="background: #2ecc71;"></div>
-					<div class="skill-bar-percent">99%</div>
+					<div class="skill-bar-percent">85%</div>
 				</div> <!-- End Skill Bar -->
 
 				<div class="skillbar clearfix " data-percent="95%">
-					<div class="skillbar-title" style="background: #d35400;"><span>HTML5</span></div>
+					<div class="skillbar-title" style="background: #d35400;"><span>UI Design</span></div>
 					<div class="skillbar-bar" style="background: #e67e22;"></div>
 					<div class="skill-bar-percent">95%</div>
 				</div> <!-- End Skill Bar -->
 
-				<div class="skillbar clearfix " data-percent="95%">
-					<div class="skillbar-title" style="background: #2980b9;"><span>CSS3</span></div>
+				<div class="skillbar clearfix " data-percent="80%">
+					<div class="skillbar-title" style="background: #2980b9;"><span>Graphic Design</span></div>
 					<div class="skillbar-bar" style="background: #3498db;"></div>
-					<div class="skill-bar-percent">95%</div>
-				</div> <!-- End Skill Bar -->
-
-				<div class="skillbar clearfix " data-percent="50%">
-					<div class="skillbar-title" style="background: #2c3e50;"><span>jQuery</span></div>
-					<div class="skillbar-bar" style="background: #2c3e50;"></div>
-					<div class="skill-bar-percent">50%</div>
+					<div class="skill-bar-percent">80%</div>
 				</div> <!-- End Skill Bar -->
 
 				<div class="skillbar clearfix " data-percent="85%">
-					<div class="skillbar-title" style="background: #46465e;"><span>PHP</span></div>
-					<div class="skillbar-bar" style="background: #5a68a5;"></div>
+					<div class="skillbar-title" style="background: #2c3e50;"><span>HTML5</span></div>
+					<div class="skillbar-bar" style="background: #2c3e50;"></div>
 					<div class="skill-bar-percent">85%</div>
 				</div> <!-- End Skill Bar -->
 
-				<div class="skillbar clearfix " data-percent="55%">
-					<div class="skillbar-title" style="background: #333333;"><span>Wordpress</span></div>
-					<div class="skillbar-bar" style="background: #525252;"></div>
-					<div class="skill-bar-percent">55%</div>
-				</div> <!-- End Skill Bar -->
-
-				<div class="skillbar clearfix " data-percent="95%">
-					<div class="skillbar-title" style="background: #124e8c;"><span>Adobe Creative Suite</span></div>
-					<div class="skillbar-bar" style="background: #4288d0;"></div>
-					<div class="skill-bar-percent">95%</div>
+				<div class="skillbar clearfix " data-percent="80%">
+					<div class="skillbar-title" style="background: #46465e;"><span>CSS3</span></div>
+					<div class="skillbar-bar" style="background: #5a68a5;"></div>
+					<div class="skill-bar-percent">80%</div>
 				</div> <!-- End Skill Bar -->
 
 			</div>
@@ -433,47 +421,36 @@
 			<div class="skills">
 				<h1>My Skills:</h1>
 
-				<div class="skillbar clearfix " data-percent="99%">
-					<div class="skillbar-title" style="background: #27ae60;"><span>Design + UX</span></div>
+				<div class="skillbar clearfix " data-percent="85%">
+					<div class="skillbar-title" style="background: #27ae60;"><span>User Experience </span></div>
 					<div class="skillbar-bar" style="background: #2ecc71;"></div>
-					<div class="skill-bar-percent">99%</div>
+					<div class="skill-bar-percent">85%</div>
 				</div> <!-- End Skill Bar -->
 
 				<div class="skillbar clearfix " data-percent="95%">
-					<div class="skillbar-title" style="background: #d35400;"><span>HTML5</span></div>
+					<div class="skillbar-title" style="background: #d35400;"><span>UI Design</span></div>
 					<div class="skillbar-bar" style="background: #e67e22;"></div>
 					<div class="skill-bar-percent">95%</div>
 				</div> <!-- End Skill Bar -->
 
-				<div class="skillbar clearfix " data-percent="95%">
-					<div class="skillbar-title" style="background: #2980b9;"><span>CSS3</span></div>
+				<div class="skillbar clearfix " data-percent="80%">
+					<div class="skillbar-title" style="background: #2980b9;"><span>Graphic Design</span></div>
 					<div class="skillbar-bar" style="background: #3498db;"></div>
-					<div class="skill-bar-percent">95%</div>
-				</div> <!-- End Skill Bar -->
-
-				<div class="skillbar clearfix " data-percent="50%">
-					<div class="skillbar-title" style="background: #2c3e50;"><span>jQuery</span></div>
-					<div class="skillbar-bar" style="background: #2c3e50;"></div>
-					<div class="skill-bar-percent">50%</div>
+					<div class="skill-bar-percent">80%</div>
 				</div> <!-- End Skill Bar -->
 
 				<div class="skillbar clearfix " data-percent="85%">
-					<div class="skillbar-title" style="background: #46465e;"><span>PHP</span></div>
-					<div class="skillbar-bar" style="background: #5a68a5;"></div>
+					<div class="skillbar-title" style="background: #2c3e50;"><span>HTML5</span></div>
+					<div class="skillbar-bar" style="background: #2c3e50;"></div>
 					<div class="skill-bar-percent">85%</div>
 				</div> <!-- End Skill Bar -->
 
-				<div class="skillbar clearfix " data-percent="55%">
-					<div class="skillbar-title" style="background: #333333;"><span>Wordpress</span></div>
-					<div class="skillbar-bar" style="background: #525252;"></div>
-					<div class="skill-bar-percent">55%</div>
+				<div class="skillbar clearfix " data-percent="80%">
+					<div class="skillbar-title" style="background: #46465e;"><span>CSS3</span></div>
+					<div class="skillbar-bar" style="background: #5a68a5;"></div>
+					<div class="skill-bar-percent">80%</div>
 				</div> <!-- End Skill Bar -->
-
-				<div class="skillbar clearfix " data-percent="95%">
-					<div class="skillbar-title" style="background: #124e8c;"><span>Adobe Creative Suite</span></div>
-					<div class="skillbar-bar" style="background: #4288d0;"></div>
-					<div class="skill-bar-percent">95%</div>
-				</div> <!-- End Skill Bar -->
+ <!-- End Skill Bar -->
 
 			</div>
 		</div> <!-- cd-bio-content -->
