--- a/team/index.html
+++ b/team/index.html
@@ -5,7 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
 
-	<link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet"> 
+	<link href="//fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet"> 
 
 	<link rel="stylesheet" href="css/reset.css"> <!-- CSS reset -->
 	<link rel="stylesheet" href="css/style.css"> <!-- Gem style -->
@@ -515,7 +515,7 @@
 		</div> <!-- cd-bio-content -->
 	</div>
 	<a href="#0" class="cd-member-bio-close">Close</a> <!-- close the author bio section -->
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+<script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
 <script src="js/main.js"></script> <!-- Gem jQuery -->
 </body>
 </html>
