--- a/team/index.html
+++ b/team/index.html
@@ -5,7 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
 
-	<link href="//fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet"> 
+	<link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet"> 
 
 	<link rel="stylesheet" href="css/reset.css"> <!-- CSS reset -->
 	<link rel="stylesheet" href="css/style.css"> <!-- Gem style -->
@@ -188,47 +188,31 @@
 			<div class="skills">
 				<h1>My Skills:</h1>
 
-				<div class="skillbar clearfix " data-percent="99%">
-					<div class="skillbar-title" style="background: #27ae60;"><span>Design + UX</span></div>
+				<div class="skillbar clearfix " data-percent="90%">
+					<div class="skillbar-title" style="background: #27ae60;"><span>HTML5</span></div>
 					<div class="skillbar-bar" style="background: #2ecc71;"></div>
-					<div class="skill-bar-percent">99%</div>
+					<div class="skill-bar-percent">90%</div>
 				</div> <!-- End Skill Bar -->
 
-				<div class="skillbar clearfix " data-percent="95%">
-					<div class="skillbar-title" style="background: #d35400;"><span>HTML5</span></div>
+				<div class="skillbar clearfix " data-percent="90%">
+					<div class="skillbar-title" style="background: #d35400;"><span>CSS3</span></div>
 					<div class="skillbar-bar" style="background: #e67e22;"></div>
-					<div class="skill-bar-percent">95%</div>
+					<div class="skill-bar-percent">90%</div>
 				</div> <!-- End Skill Bar -->
 
-				<div class="skillbar clearfix " data-percent="95%">
-					<div class="skillbar-title" style="background: #2980b9;"><span>CSS3</span></div>
+				<div class="skillbar clearfix " data-percent="80%">
+					<div class="skillbar-title" style="background: #2980b9;"><span>UI Design</span></div>
 					<div class="skillbar-bar" style="background: #3498db;"></div>
-					<div class="skill-bar-percent">95%</div>
-				</div> <!-- End Skill Bar -->
-
-				<div class="skillbar clearfix " data-percent="50%">
-					<div class="skillbar-title" style="background: #2c3e50;"><span>jQuery</span></div>
-					<div class="skillbar-bar" style="background: #2c3e50;"></div>
-					<div class="skill-bar-percent">50%</div>
+					<div class="skill-bar-percent">80%</div>
 				</div> <!-- End Skill Bar -->
 
 				<div class="skillbar clearfix " data-percent="85%">
-					<div class="skillbar-title" style="background: #46465e;"><span>PHP</span></div>
-					<div class="skillbar-bar" style="background: #5a68a5;"></div>
+					<div class="skillbar-title" style="background: #2c3e50;"><span>Theming  UI</span></div>
+					<div class="skillbar-bar" style="background: #2c3e50;"></div>
 					<div class="skill-bar-percent">85%</div>
 				</div> <!-- End Skill Bar -->
 
-				<div class="skillbar clearfix " data-percent="55%">
-					<div class="skillbar-title" style="background: #333333;"><span>Wordpress</span></div>
-					<div class="skillbar-bar" style="background: #525252;"></div>
-					<div class="skill-bar-percent">55%</div>
-				</div> <!-- End Skill Bar -->
-
-				<div class="skillbar clearfix " data-percent="95%">
-					<div class="skillbar-title" style="background: #124e8c;"><span>Adobe Creative Suite</span></div>
-					<div class="skillbar-bar" style="background: #4288d0;"></div>
-					<div class="skill-bar-percent">95%</div>
-				</div> <!-- End Skill Bar -->
+				<!-- End Skill Bar -->
 
 			</div>
 		</div> <!-- cd-bio-content -->
@@ -363,47 +347,35 @@
 			<div class="skills">
 				<h1>My Skills:</h1>
 
-				<div class="skillbar clearfix " data-percent="99%">
-					<div class="skillbar-title" style="background: #27ae60;"><span>Design + UX</span></div>
+				<div class="skillbar clearfix " data-percent="70%">
+					<div class="skillbar-title" style="background: #27ae60;"><span>UI Design</span></div>
 					<div class="skillbar-bar" style="background: #2ecc71;"></div>
-					<div class="skill-bar-percent">99%</div>
+					<div class="skill-bar-percent">70%</div>
 				</div> <!-- End Skill Bar -->
 
-				<div class="skillbar clearfix " data-percent="95%">
-					<div class="skillbar-title" style="background: #d35400;"><span>HTML5</span></div>
+				<div class="skillbar clearfix " data-percent="70%">
+					<div class="skillbar-title" style="background: #d35400;"><span>Graphic Designer</span></div>
 					<div class="skillbar-bar" style="background: #e67e22;"></div>
-					<div class="skill-bar-percent">95%</div>
+					<div class="skill-bar-percent">70%</div>
 				</div> <!-- End Skill Bar -->
 
-				<div class="skillbar clearfix " data-percent="95%">
-					<div class="skillbar-title" style="background: #2980b9;"><span>CSS3</span></div>
+				<div class="skillbar clearfix " data-percent="65%">
+					<div class="skillbar-title" style="background: #2980b9;"><span>Motion Graphics</span></div>
 					<div class="skillbar-bar" style="background: #3498db;"></div>
-					<div class="skill-bar-percent">95%</div>
+					<div class="skill-bar-percent">65%</div>
 				</div> <!-- End Skill Bar -->
 
-				<div class="skillbar clearfix " data-percent="50%">
-					<div class="skillbar-title" style="background: #2c3e50;"><span>jQuery</span></div>
+				<div class="skillbar clearfix " data-percent="80%">
+					<div class="skillbar-title" style="background: #2c3e50;"><span>Video Editing</span></div>
 					<div class="skillbar-bar" style="background: #2c3e50;"></div>
-					<div class="skill-bar-percent">50%</div>
+					<div class="skill-bar-percent">80%</div>
 				</div> <!-- End Skill Bar -->
 
-				<div class="skillbar clearfix " data-percent="85%">
-					<div class="skillbar-title" style="background: #46465e;"><span>PHP</span></div>
+				<div class="skillbar clearfix " data-percent="60%">
+					<div class="skillbar-title" style="background: #46465e;"><span>Photography</span></div>
 					<div class="skillbar-bar" style="background: #5a68a5;"></div>
-					<div class="skill-bar-percent">85%</div>
-				</div> <!-- End Skill Bar -->
-
-				<div class="skillbar clearfix " data-percent="55%">
-					<div class="skillbar-title" style="background: #333333;"><span>Wordpress</span></div>
-					<div class="skillbar-bar" style="background: #525252;"></div>
-					<div class="skill-bar-percent">55%</div>
-				</div> <!-- End Skill Bar -->
-
-				<div class="skillbar clearfix " data-percent="95%">
-					<div class="skillbar-title" style="background: #124e8c;"><span>Adobe Creative Suite</span></div>
-					<div class="skillbar-bar" style="background: #4288d0;"></div>
-					<div class="skill-bar-percent">95%</div>
-				</div> <!-- End Skill Bar -->
+					<div class="skill-bar-percent">60%</div>
+				</div> <!-- End Skill Bar --> <!-- End Skill Bar -->
 
 			</div>
 		</div> <!-- cd-bio-content -->
@@ -421,32 +393,32 @@
 			<div class="skills">
 				<h1>My Skills:</h1>
 
-				<div class="skillbar clearfix " data-percent="85%">
+				<div class="skillbar clearfix " data-percent="50%">
 					<div class="skillbar-title" style="background: #27ae60;"><span>User Experience </span></div>
 					<div class="skillbar-bar" style="background: #2ecc71;"></div>
-					<div class="skill-bar-percent">85%</div>
+					<div class="skill-bar-percent">50%</div>
 				</div> <!-- End Skill Bar -->
 
-				<div class="skillbar clearfix " data-percent="95%">
+				<div class="skillbar clearfix " data-percent="60%">
 					<div class="skillbar-title" style="background: #d35400;"><span>UI Design</span></div>
 					<div class="skillbar-bar" style="background: #e67e22;"></div>
-					<div class="skill-bar-percent">95%</div>
+					<div class="skill-bar-percent">60%</div>
 				</div> <!-- End Skill Bar -->
 
-				<div class="skillbar clearfix " data-percent="80%">
+				<div class="skillbar clearfix " data-percent="60%">
 					<div class="skillbar-title" style="background: #2980b9;"><span>Graphic Design</span></div>
 					<div class="skillbar-bar" style="background: #3498db;"></div>
-					<div class="skill-bar-percent">80%</div>
+					<div class="skill-bar-percent">60%</div>
 				</div> <!-- End Skill Bar -->
 
-				<div class="skillbar clearfix " data-percent="85%">
-					<div class="skillbar-title" style="background: #2c3e50;"><span>HTML5</span></div>
+				<div class="skillbar clearfix " data-percent="60%">
+					<div class="skillbar-title" style="background: #2c3e50;"><span>Digital Sketching</span></div>
 					<div class="skillbar-bar" style="background: #2c3e50;"></div>
-					<div class="skill-bar-percent">85%</div>
+					<div class="skill-bar-percent">60%</div>
 				</div> <!-- End Skill Bar -->
 
 				<div class="skillbar clearfix " data-percent="80%">
-					<div class="skillbar-title" style="background: #46465e;"><span>CSS3</span></div>
+					<div class="skillbar-title" style="background: #46465e;"><span>Product Design</span></div>
 					<div class="skillbar-bar" style="background: #5a68a5;"></div>
 					<div class="skill-bar-percent">80%</div>
 				</div> <!-- End Skill Bar -->
@@ -469,53 +441,53 @@
 			<div class="skills">
 				<h1>My Skills:</h1>
 
-				<div class="skillbar clearfix " data-percent="99%">
-					<div class="skillbar-title" style="background: #27ae60;"><span>Design + UX</span></div>
-					<div class="skillbar-bar" style="background: #2ecc71;"></div>
-					<div class="skill-bar-percent">99%</div>
-				</div> <!-- End Skill Bar -->
-
-				<div class="skillbar clearfix " data-percent="95%">
-					<div class="skillbar-title" style="background: #d35400;"><span>HTML5</span></div>
-					<div class="skillbar-bar" style="background: #e67e22;"></div>
-					<div class="skill-bar-percent">95%</div>
-				</div> <!-- End Skill Bar -->
-
-				<div class="skillbar clearfix " data-percent="95%">
-					<div class="skillbar-title" style="background: #2980b9;"><span>CSS3</span></div>
-					<div class="skillbar-bar" style="background: #3498db;"></div>
-					<div class="skill-bar-percent">95%</div>
-				</div> <!-- End Skill Bar -->
-
-				<div class="skillbar clearfix " data-percent="50%">
-					<div class="skillbar-title" style="background: #2c3e50;"><span>jQuery</span></div>
-					<div class="skillbar-bar" style="background: #2c3e50;"></div>
-					<div class="skill-bar-percent">50%</div>
-				</div> <!-- End Skill Bar -->
-
 				<div class="skillbar clearfix " data-percent="85%">
-					<div class="skillbar-title" style="background: #46465e;"><span>PHP</span></div>
-					<div class="skillbar-bar" style="background: #5a68a5;"></div>
+					<div class="skillbar-title" style="background: #27ae60;"><span>HTML5 & CSS3</span></div>
+					<div class="skillbar-bar" style="background: #2ecc71;"></div>
 					<div class="skill-bar-percent">85%</div>
 				</div> <!-- End Skill Bar -->
 
-				<div class="skillbar clearfix " data-percent="55%">
-					<div class="skillbar-title" style="background: #333333;"><span>Wordpress</span></div>
-					<div class="skillbar-bar" style="background: #525252;"></div>
-					<div class="skill-bar-percent">55%</div>
+				<div class="skillbar clearfix " data-percent="70%">
+					<div class="skillbar-title" style="background: #d35400;"><span>JQuery/JS</span></div>
+					<div class="skillbar-bar" style="background: #e67e22;"></div>
+					<div class="skill-bar-percent">70%</div>
 				</div> <!-- End Skill Bar -->
 
-				<div class="skillbar clearfix " data-percent="95%">
-					<div class="skillbar-title" style="background: #124e8c;"><span>Adobe Creative Suite</span></div>
+				<div class="skillbar clearfix " data-percent="80%">
+					<div class="skillbar-title" style="background: #2980b9;"><span>SASS</span></div>
+					<div class="skillbar-bar" style="background: #3498db;"></div>
+					<div class="skill-bar-percent">80%</div>
+				</div> <!-- End Skill Bar -->
+
+				<div class="skillbar clearfix " data-percent="80%">
+					<div class="skillbar-title" style="background: #2c3e50;"><span>WordPress, BOLT</span></div>
+					<div class="skillbar-bar" style="background: #2c3e50;"></div>
+					<div class="skill-bar-percent">80%</div>
+				</div> <!-- End Skill Bar -->
+
+				<div class="skillbar clearfix " data-percent="70%">
+					<div class="skillbar-title" style="background: #46465e;"><span>PHP/CodeIgniter/SQL</span></div>
+					<div class="skillbar-bar" style="background: #5a68a5;"></div>
+					<div class="skill-bar-percent">70%</div>
+				</div> <!-- End Skill Bar -->
+
+				<div class="skillbar clearfix " data-percent="50%">
+					<div class="skillbar-title" style="background: #333333;"><span>Web Animations</span></div>
+					<div class="skillbar-bar" style="background: #525252;"></div>
+					<div class="skill-bar-percent">50%</div>
+				</div> <!-- End Skill Bar -->
+
+				<div class="skillbar clearfix " data-percent="30%">
+					<div class="skillbar-title" style="background: #124e8c;"><span>AngularJS</span></div>
 					<div class="skillbar-bar" style="background: #4288d0;"></div>
-					<div class="skill-bar-percent">95%</div>
+					<div class="skill-bar-percent">30%</div>
 				</div> <!-- End Skill Bar -->
 
 			</div>
 		</div> <!-- cd-bio-content -->
 	</div>
 	<a href="#0" class="cd-member-bio-close">Close</a> <!-- close the author bio section -->
-<script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
 <script src="js/main.js"></script> <!-- Gem jQuery -->
 </body>
 </html>
